--- a/exec/포팅메뉴얼.md
+++ b/exec/포팅메뉴얼.md
@@ -5,16 +5,16 @@
 
 ## 1. 개발 환경
 
-server : AWS EC2 Ubuntu 20.04 LTS
-Visual Studio Code : 1.81.0
-INtelliJIDEA : 2023.1.3 (Ultimate Edition)
-JVM : openjdk version "11.0.20" 2023-07-18
-Docker : 24.0.4
-Node.js : 16.20.1 LTS
-MySQL : 8.0.33-0ubuntu0.20.04.2
-Redis : 7.0.12
-Nginx : openvidu-proxy:2.28.0
-Jenkins : 2.418
+server : AWS EC2 Ubuntu 20.04 LTS  
+Visual Studio Code : 1.81.0  
+INtelliJIDEA : 2023.1.3 (Ultimate Edition)  
+JVM : openjdk version "11.0.20" 2023-07-18  
+Docker : 24.0.4  
+Node.js : 16.20.1 LTS  
+MySQL : 8.0.33-0ubuntu0.20.04.2  
+Redis : 7.0.12  
+Nginx : openvidu-proxy:2.28.0  
+Jenkins : 2.418  
 Openvidu : 2.28.0
 
 <br/>
@@ -560,6 +560,9 @@ curl https://s3-eu-west-1.amazonaws.com/aws.openvidu.io/install_openvidu_latest.
 
 ./openvidu start
 ```
+
+-   openvidu의 .env에서
+    -   OPENVIDU_RECORDING=true, OPENVIDU_RECORDING_DEBUG=true, OPENVIDU_RECORDING_PATH=/home/ubuntu/recordings, OPENVIDU_RECORDING_PUBLIC_ACCESS=true으로 설정
 
 ### 7. nginx https 설정
 
